--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -45,16 +45,18 @@ service:
   targetPort: 8000
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  className: "nginx"
+  annotations: {
+     kubernetes.io/ingress.class: nginx,
+     kubernetes.io/tls-acme: "true"
+  }
   hosts:
-    - host: chart-example.local
+    - host: postgres.mcp.avukat.cloud
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
+          port: 8000
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
